Bug 932914 - Broadcast AdapterAdded after adapter name is updated. r=echou, a=koi+